--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ rss: default
 menu:
   Archives: /archives
   About: /about
+  Email: mailto:hi@clclcl.fun
 
 # ===========================================
 # Widget Settings
